# build-small-hackathon-v1

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  hackathon-rules.md  potential-idea.md  pyproject.toml  requirements.txt  shutdown.sh  start.sh
Fireboy-training-policy-vla/: README.md  live-retarget-bridge-results-2026-06-15.md  minicpm-v-to-vla.md  minicpm-vla-action-head-scaffold.md  modal-inference-results-2026-06-15.md  navigation-grounding-results-2026-06-15.md  overnight-goal-runpod-newton-kimodo-vla-plan.md  physics-body-first.md  physics-body-fix-results.md  runpod-results-2026-06-15.md
docs/: discord-submission-post.md  hf-blog-draft.md  hf-spaces-submission.md  living-build-plan.md  minicpm-v-toy-control-brainstorm.md  mixamo-test-plan.md  modal-1bit-model-plan.md  model-alignment-notes.md  prize-qualification.md  stage-2-rigging-meshing-handoff.md  toy-v3-animation-sequencer-handoff.md  virtual-toy-v3-architecture.md
fire-boy-rig/: README.md  electraica-rigged-full.glb  fire-boy-rigged-full.glb  shark-girl-rigged-full.glb  squeaky-rigged-full.glb
fireboy-vla-notes/: README.md  rig-comparison-and-policy-path.md
fireboy-vla-physics/: .gitignore  ARTICULATION_SPEC.md  CLOUD_RUNBOOK.md  PLAN.md  PROTOMOTIONS_LANE.md  README.md  RUNPOD_STEP_BY_STEP.md  SUBMISSION_README.md  WHERE_WE_LEFT_OFF.md  modal_jobs.py  modal_vla_router.py  policy_registry.json  requirements-local.txt  requirements.txt
frontend/: blender-models.html  fireboy-policy-gallery.html  fireboy-rigged.html  index.html  model-gallery.html  mujoco-policy.html  (+4 more)
(+240 files in other folders)
