[project]
name = "tiny-toybox"
version = "0.1.0"
description = "A Gradio-hosted Three.js virtual pet room for the Build Small Hackathon."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "gradio>=5.0.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[tool.uv]
package = false

